helm/traefik/teste/goodbye.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodbye-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: goodbye.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: goodbye-service
            port:
              number: 80
