helm/traefik/teste/welcome.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: welcome.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: welcome-service
            port:
              number: 80
